# astrophage

./: .gitignore  Astrophage_Colab.ipynb  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: book.toml  index.hbs
docs/src/: README.md  SUMMARY.md  api-reference.md  architecture.md  changelog.md  contributing.md  feature-engineering.md  results.md  two-stage-model.md
output/: report.json
src/: data.rs  decision_tree.rs  evaluation.rs  features.rs  lib.rs  logger.rs  main.rs  model.rs  report.rs  two_stage_model.rs
