[package]
name = "astrophage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ndarray = "0.17.2"
polars = { version = "0.54.4", features = ["csv", "lazy", "dtype-full", "ndarray", "strings"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["tracing"] }
